[package]
name = "lnmp-sdk-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "lnmp_sdk_rust"
path = "src/lib.rs"

[dependencies]
lnmp-core = { path = "../lnmp-protocol/crates/lnmp-core" }

# (Local development only) If using a local copy, ensure the folder is named `lnmp-protocol`
# lnmp-core = { path = "../lnmp-protocol/crates/lnmp-core" }
